[package]
name = "http_tools"
version = "0.1.2"
authors = ["Jon Davis <JonathonDevinDavis@gmail.com>"]
edition = "2018"
description = "A library of functions for working with the Http type"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Jon-Davis/http_tools"
keywords = ["http", "router", "mux"]
categories = ["web-programming"]

[dependencies]
http = "0.1"